--- a/rtos.uvprojx
+++ b/rtos.uvprojx
@@ -389,6 +389,11 @@
               <FileType>1</FileType>
               <FilePath>src\gpio.c</FilePath>
             </File>
+            <File>
+              <FileName>kernel.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\kernel.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
