--- a/rtos.uvprojx
+++ b/rtos.uvprojx
@@ -404,6 +404,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\timer.c</FilePath>
             </File>
+            <File>
+              <FileName>event.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\event.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
