--- a/msvc/rtos.vcxproj
+++ b/msvc/rtos.vcxproj
@@ -178,6 +178,9 @@
     <ClInclude Include="..\source\kernel\timer\timer.hpp" />
     <ClInclude Include="arm_compat.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\external\st\STM32F10x\startup_stm32f10x_hd.s" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
